--- a/src/styles/profile/_reset-password-panel.scss
+++ b/src/styles/profile/_reset-password-panel.scss
@@ -15,10 +15,12 @@ $block-class: 'reset-password-panel';
             background-color: #fff;
             border-radius: 2px;
             border: 2px solid $header-font-color;
+            padding: 2px;
 
             &:hover {
                 background: darken(#4eb276, 10);
                 border-color: darken(#4eb276, 10);
+                color: #fff;
             }
         }
 
